--- a/PracticePlug/src/main/webapp/WEB-INF/web.xml
+++ b/PracticePlug/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+		
 	<!-- Processes application requests -->
 	<!-- 
 		DispatcherServlet == FrontController 역할
@@ -59,6 +59,24 @@
 	<welcome-file-list>
 		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	   <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/applicationContext.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
+	
+	
+	
 
 </web-app>
 
